[package]
description = "Mommy's here to support you when running cargo~"
repository = "https://github.com/lukasfri/cargo-mommy"
license = "MIT OR Apache-2.0"
name = "cargo-mommy-ce"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confique = { version = "0.2", default-features = false, features = ["toml"]}
dirs = "5.0.1"
rand = "0.8.5"
serde = { version = "1.0.185", features = ["derive"] }
toml = "0.7.6"
